# django-starter-kit

./: .coveragerc  .env  .env.example  .safety-policy.yml  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  start.sh
.github/workflows/: django.yml
.sonar/: report-task.txt
apps/activity/: apps.py  constants.py  mixin.py  models.py  utils.py
apps/activity/migrations/: 0001_initial.py  0002_userdevice.py
apps/activity/services/: device_track.py
apps/generics/: exceptions.py  mixins.py  permissions.py  responses.py
apps/generics/middleware/: correlation_id_middleware.py  current_user_middleware.py  device_middleware.py  exception_handler.py  ip_whitelist_middleware.py  logging_middleware.py
apps/generics/utils/: json_formatter.py  logging_filters.py  token_utils.py
apps/monitoring/api/: schemas.py  urls.py  views.py
apps/notifications/: constants.py  models.py
apps/notifications/migrations/: 0001_initial.py
apps/notifications/services/: email_service.py  in_app_service.py  notification_service.py  sms_service.py  webhook_service.py
apps/notifications/tasks/: email_tasks.py  notification_tasks.py
apps/notifications/templates/emails/: account_verification.html  password_reset.html
apps/users/: apps.py  constants.py  models.py  signals.py
apps/users/api/: auth_views.py  profile_views.py  role_views.py  schemas.py  urls.py  user_views.py
apps/users/migrations/: 0001_initial.py  0002_userpermission_role_userrole.py  0003_user_avatar_url_user_failed_login_attempts_and_more.py
apps/users/selectors/: auth_selectors.py  role_selectors.py  user_selectors.py
apps/users/serializers/: auth_serializer.py  profile_serializer.py  role_serializer.py  user_serializer.py
apps/users/services/: auth_service.py  profile_service.py  role_service.py  user_service.py
apps/users/tests/: test_infra_coverage.py  test_service_coverage.py  test_targeted_coverage.py  test_user_api.py
apps/users/tests/factories/: user_factory.py
config/: asgi.py  celery.py  urls.py  utils.py  wsgi.py
config/settings/: base.py  ci.py  develop.py  test.py
