[project]
name = "django-starter-kit"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "asgiref (==3.11.1)",
    "attrs (==25.4.0)",
    "django (==6.0.3)",
    "djangorestframework (==3.16.1)",
    "djangorestframework-simplejwt (==5.5.1)",
    "drf-spectacular (==0.29.0)",
    "inflection (==0.5.1)",
    "jsonschema (==4.26.0)",
    "jsonschema-specifications (==2025.9.1)",
    "psycopg2-binary (==2.9.11)",
    "pyjwt (==2.11.0)",
    "python-dotenv (==1.2.2)",
    "pyyaml (==6.0.3)",
    "referencing (==0.37.0)",
    "rpds-py (==0.30.0)",
    "sqlparse (==0.5.5)",
    "typing-extensions (==4.15.0)",
    "uritemplate (==4.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
